Correctly display the navbar toggler when using a little screen (on mobile) + fix login unit-test

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -158,7 +158,8 @@ ui bootstrap tweaks
 
 nav a {
   &.nav-link,
-  &.navbar-brand {
+  &.navbar-brand,
+  &.navbar-toggler {
     color: gray();
   }
 }
